--- a/Hands-on lab/2.md
+++ b/Hands-on lab/2.md
@@ -10,7 +10,7 @@ In this lab, you will complete the following tasks:
 
 ### Task 1: Setting up Azure Migrate
 
-1. From the Windows search bar, search for **Default apps** and select it.
+1. In the Lab VM, from the Windows search bar, search for **Default apps** and select it.
 
    ![Find Default Apps](media/DefaultApp.png "Find Default Apps")
    
