--- a/Hands-on lab/4.md
+++ b/Hands-on lab/4.md
@@ -159,7 +159,7 @@ In this task, you will retrieve the Fully Qualified Domain Name for the Azure SQ
 
 After you have reviewed the assessment results and you have ensured the database is a candidate for migration to Azure SQL Database, please use the Data Migration Assistant to migrate the schema to Azure SQL Database.
 
-1. Return to the Data Migration Assistant, and select the New **+** icon in the left-hand menu.
+1. Return to the Data Migration Assistant in the SQL VM, and select the New **+** icon in the left-hand menu.
 
 2. In the New project dialogue, enter the following:
 
@@ -253,7 +253,7 @@ After you have reviewed the assessment results and you have ensured the database
 
     ![In the SSMS Object Explorer, Databases, parts, and Tables are expanded, showing the tables created by the deploy schema script. Security Users are expanded to show database user PUWebSite is migrated as well.](media/updated50.png "SSMS Object Explorer").
 
-> **Note**: You can now disconnect from the **SQLVM** and perform the remaining exercises from the **LabVM**.
+> **Note**: You can now minimize the **SQLVM** and perform the remaining exercises from the **LabVM**.
 
 ### Task 5: Migrate the database using the Azure Database Migration Service
 
@@ -277,11 +277,11 @@ At this point, you have migrated the database schema using DMA. In this task, yo
 
    ![The New migration project blade is displayed, with the values specified above entered into the appropriate fields.](media/click_new_migration_DMS.png "New migration project")
 
-5. On the New migration project Blade, enter the following:
+5. On the New migration project blade, enter the following:
 
    - **Target server type**: Select **Azure SQL Database** **(1)**.
    - **Migration mode**: Select **Offline** **(2)**.
-   - **Configure runtime settings** **(3)**.
+   - Click on **Configure runtime settings** **(3)**.
    - When the **Configure integration runtime** pop-up appears, copy any one of the **two keys** **(4)** into a notebook.
 
    ![The New migration project blade is displayed, with the values specified above entered into the appropriate fields.](media/Select_target_preapre.png "New migration project")
@@ -305,7 +305,7 @@ At this point, you have migrated the database schema using DMA. In this task, yo
 
    ![The Migration Wizard Select source blade is displayed, with the values specified above entered into the appropriate fields.](media/After_integration_setup.png "Migration Wizard Select source")
 
-10. On the Migration Wizard **Select source** Blade, enter the following:
+10. On the Migration Wizard **Select source** blade, enter the following:
 
    - **Source SQL Server instance name**: Enter the Private IP address of SqlServer2008 that you copied in step no 1.    
    - **Authentication type**: Select SQL Authentication.
@@ -324,7 +324,7 @@ At this point, you have migrated the database schema using DMA. In this task, yo
     
     ![The Migration Wizard Select database blade is displayed. PartsUnlimited databases is selected. Next: Select target >> button is highlighted.](media/Database_Selected.png "Migration Wizard Select databases")
 
-12. On the Migration Wizard **Select target** Blade, enter the following:
+12. On the Migration Wizard **Select target** blade, enter the following:
 
     - **Subscription**: Provide the Subscription
     
@@ -343,11 +343,11 @@ At this point, you have migrated the database schema using DMA. In this task, yo
     
     ![](media/Connecting_to_aTarget_database.png )
 
-13. On the Migration Wizard **Map to target databases** Blade, confirm that **PartsUnlimited** is checked as the source database, and **parts** is the target database on the same line, then select **Next: Select database tables to migrate >>**.
+13. On the Migration Wizard **Map to target databases** blade, confirm that **PartsUnlimited** is checked as the source database, and **parts** is the target database on the same line, then select **Next: Select database tables to migrate >>**.
 
     ![The Migration Wizard Map to target database blade is displayed, with the ContosoInsurance line highlighted.](media/01-04-2024(6).png "Migration Wizard Map to target databases")
 
-14. On the Migration Wizard **Configure migration settings** Blade, expand the **PartsUnlimited** database, verify all the tables are selected and select **Next: Database migration Summary >>**.
+14. On the Migration Wizard **Configure migration settings** blade, expand the **PartsUnlimited** database, verify all the tables are selected and select **Next: Database migration Summary >>**.
 
     > **Note**: If you see that table data cannot be migrated, the source table is empty. it is completely fine please select the tables which are not greyed out or the table has data in it.
 
@@ -373,7 +373,7 @@ Now that we have both our application and database migrated to Azure. It is time
 
    ![The parts SQL database resource is highlighted in the list of resources.](media/updated64.png "SQL database")
 
-2. Switch to the **Connection strings (1)** Blade, and copy the connection string under **ADO.NET(SQL authentication)** by selecting the copy button **(2)**.
+2. Switch to the **Connection strings (1)** blade under **Settings**, and copy the connection string under **ADO.NET(SQL authentication)** by selecting the copy button **(2)**.
 
    ![Connection string panel if SQL Database is open. Copy button for ADO.NET connection string is highlighted.](media/appmod-ex4-t6-s2.png "Database connection string")
 
@@ -385,7 +385,7 @@ Now that we have both our application and database migrated to Azure. It is time
 
    ![The search box for resources is filled in with partsunlimited-web. The partsunlimited-web-20 Azure App Service is highlighted in the list of resources in the hands-on-lab-SUFFIX resource group.](media/4.6.4.png "Resources")
 
-5. Switch to the **Environment variables (1)** Blade, select **connection strings (2)** and then click on **+ Add (3).**
+5. Switch to the **Environment variables (1)** blade under **Settings**, select **connection strings (2)** and then click on **+ Add (3).**
 
    ![App service configuration panel is open. +New connection string button is highlighted.](media/4.6.5.png "App Service Configuration")
 
@@ -407,7 +407,7 @@ Now that we have both our application and database migrated to Azure. It is time
 
    ![App Service Configuration page is open. Save button is highlighted.](media/apply01.png "App Service Configuration")
 
-8. Switch to the **Overview (1)** Blade, and select **Default domain (2)** to navigate to the Parts Unlimited website hosted in our Azure App Service using Azure SQL Database.
+8. Switch to the **Overview (1)** blade, and select **Default domain (2)** to navigate to the Parts Unlimited website hosted in our Azure App Service using Azure SQL Database.
 
    ![Overview panel for the App Service is on screen. URL for the app service if highlighted.](media/appmod-ex4-t6-s8.png "App Service public URL")
 
