--- a/Hands-on lab/5.md
+++ b/Hands-on lab/5.md
@@ -158,8 +158,6 @@ In this lab, you will complete the following tasks:
 
 1. Select your staging slot from the list of deployment slots.
 
-    ![Deployment slots are listed. Staging slot named partsunlimited-web-20-staging is highlighted.](media/updated81.png "Staging deployment slot")
-
 2. From the toolbar menu, select **Download publish profile**. The publish profile is used to authenticate between GitHub and Azure.
 
     ![The staging app service slot screen displays with the Get publish profile button highlighted on the toolbar.](media/updated97.png "Staging Publish Profile")
@@ -206,7 +204,7 @@ In this lab, you will complete the following tasks:
 
     ![The image shows successfully pulling down the new GitHub workflow.](media/git-pull-workflow-file-locally.png "Pull Git Workflow")
 
-11. Open File Explorer and copy the stagingdeploy.yml file from `C:\MCW\MCW-App-modernization-microsoft-app-modernization-v2\Hands-on lab\lab-files\workflow\stagingdeploy.yml`, then paste the content into `C:\MCW\MCW-App-modernization-microsoft-app-modernization-v2\Hands-on lab\lab-files\src.github\workflows\stagingdeploy.yml` file path, replacing the default GitHub workflow YAML content.
+11. Open File Explorer and copy the stagingdeploy.yml file from `C:\MCW\MCW-App-modernization-microsoft-app-modernization-v2\Hands-on lab\lab-files\workflow\stagingdeploy.yml`, then paste the content into `C:\MCW\MCW-App-modernization-microsoft-app-modernization-v2\Hands-on lab\lab-files\src\.github\workflows\stagingdeploy.yml` file path, replacing the default GitHub workflow YAML content.
 
 12. Open the `stagingdeploy.yml` in Visual Studio Code. Replace the suffix value with **<inject key="DeploymentID" />** on lines 7 and 11 to match your lab.
 
