--- a/Hands-on lab/8.md
+++ b/Hands-on lab/8.md
@@ -57,12 +57,16 @@ In this task, we will see how to load test the partsunlimited web application wi
 9. On the Quick test page, provide the following details:
 
    - **Test URL:** Enter **https://partsunlimited-web-<inject key="DeploymentID" enableCopy="false"/>.azurewebsites.net** **(1)**
+
+     > NOTE: If you don't see the Test URL column ensure **Enable advanced settings** is unchecked.
    
    -  The Rest of the details are optional. Default values are already updated for all the tasks.
    
    -  Click on **Review + create (2)**. This will create and start the load test.
 
       ![](media/image12.png)
+
+ > NOTE!! If you don't have a GitHub account, then navigate to the following link ```https://github.com/join ``` and create one.
 
 10. Once the load test begins, you will be directed to the test run dashboard. Azure Load Testing records both client-side and server-side metrics while the load test is underway. 
 
