--- a/Hands-on lab/9.md
+++ b/Hands-on lab/9.md
@@ -136,9 +136,9 @@ App Service resource. You can search for **`partsunlimited-web`** **(1)** to fin
 
    ![](media/9.2.1.png )
 
-2. Switch to the **Configuration (1)** Blade and select the connection string with the name **DefaultConnectionString (2)**.
+2. Switch to the **Environment Variables (1)** Blade and select the **Connection string(2)** and select the connection string with the name **DefaultConnectionString (3)**.
 
-   ![](media/connection1.png)
+   ![](media/E9T3S2.png)
    
 3. Edit the keyvault secret in the **@Microsoft.KeyVault(SecretUri=Secret_identifier)** format. Replace the **Secret_identifier** with the value you have copied in task 1, step 11. Copy the edited secret value that looks as mentioned below:
 
